# text-tracker

./: CHANGELOG.md  README.md  hie.yaml  stack.yaml  text-tracker.cabal
.stack-work/: stack.sqlite3
.stack-work/ghci/3d3eb2a4/: cabal_macros.h
.stack-work/install/x86_64-osx/81989be656b94d44efe36b24098a713e6f210b392d4fa51473b4b9317fae58bc/9.8.4/doc/text-tracker-0.1.0.0/: LICENSE
app/: DiffRunner.hs  TermProcessor.hs
notes/: week1.md  week2.md
src/: Diff.hs  Term.hs  Terms.hs
test/: Spec.hs  TermsSpec.hs
